--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "click>=8.2.1",
     "pydantic>=2.11.7",
+    "pyinstaller>=6.16.0",
     "pytest>=8.4.1",
 ]
 [project.scripts]
